@@ -1,3 +1,8 @@
+2013-12-03  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/45685
+	* gcc.dg/tree-ssa/pr45685.c: New test.
+
 2013-12-13  Bin Cheng  <bin.cheng@arm.com>
 
 	PR tree-optimization/58296
